--- a/style.css
+++ b/style.css
@@ -19,3 +19,26 @@ body {
 #mainNavBar .navbar-brand {
   color: #ea1c2c;
 }
+
+#headingGroup span {
+  color: #ea1c2c;
+}
+
+#headingGroup h1 {
+  font-weight: 100;
+  font-size: 3rem;
+}
+
+@media (max-width: 1100px) {
+  #headingGroup h1 {
+    font-weight: 100;
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 915px) {
+  #headingGroup h1 {
+    font-weight: 100;
+    font-size: 1.5rem;
+  }
+}
