--- a/style.css
+++ b/style.css
@@ -36,13 +36,6 @@ body {
   }
 }
 
-@media (max-width: 915px) {
-  #headingGroup h1 {
-    font-weight: 100;
-    font-size: 1.5rem;
-  }
-}
-
 .blurb h2 {
   color: #ea1c2c;
   font-weight: 100;
@@ -58,4 +51,17 @@ body {
 
 .content {
   margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.navbar.scrolled {
+  background: rgb(222, 192, 222);
+  transition: background 1s;
+}
+
+@media (max-width: 915px) {
+  #headingGroup h1 {
+    font-weight: 100;
+    font-size: 1.5rem;
+  }
 }
