--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 body {
   background: #f5d9df;
   font-family: "Nunito", sans-serif;
